--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,4 +1,6 @@
-.elements {
+.cards {
+  margin: 0;
+  padding: 0;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, 282px);
