--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   max-width: 880px;
   min-height: 74px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 894px) {
@@ -13,7 +13,6 @@
 
 @media screen and (max-width: 768px) {
   .header {
-    padding: 0 27px 0;
     min-height: 56px;
 }
 }
