--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,7 +7,10 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  align-self: center;
+  align-items: stretch;
   color: #000;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   position: relative;
 }
 
