--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,8 +1,7 @@
 .popup__submit-button {
-  margin: 0;
+  margin: 18px 0 0;
   padding: 0;
   min-height: 50px;
-  width: 100%;
   background-color: #000;
   border-radius: 2px;
   font-size: 18px;
@@ -15,10 +14,13 @@
 
 .popup__submit-button:hover {
   background-color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 618px) {
   .popup__submit-button {
+    min-height: 46px;
     font-size: 14px;
+    margin-top: 15px;
 }
 }
