--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,12 +8,13 @@
   background-image: url(../../../images/edit-button.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 50%;
+  background-size: 10px;
 }
 
 @media screen and (max-width: 618px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
+    background-size: 7.5px;
 }
 }
