--- a/pages/index.css
+++ b/pages/index.css
@@ -18,13 +18,13 @@
 @import url(../blocks/profile/__bio/profile__bio.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 
-@import url(../blocks/elements/elements.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__like-button/cards__like-button.css);
+@import url(../blocks/cards/__like-button/_active/cards__like-button_active.css);
 
-@import url(../blocks/card/card.css);
-@import url(../blocks/card/__image/card__image.css);
-@import url(../blocks/card/__title/card__title.css);
-@import url(../blocks/card/__like-button/card__like-button.css);
-@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -32,7 +32,7 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__close-button.css/popup__close-button.css);
+@import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__field/popup__field.css);
