--- a/blocks/popup/__container/_var/popup__container_var_pictures.css
+++ b/blocks/popup/__container/_var/popup__container_var_pictures.css
@@ -2,6 +2,7 @@
   color: #fff;
   padding: 0;
   background-color: transparent;
-  width: 75vh;
+  align-items: flex-start;
+  width: 75vw;
   height: 75vh;
 }
