--- a/blocks/popup/__container/_var/popup__container_var_pictures.css
+++ b/blocks/popup/__container/_var/popup__container_var_pictures.css
@@ -1,8 +1,7 @@
 .popup__container_var_pictures {
   color: #fff;
   padding: 0;
-  background-color: transparent;
-  align-items: flex-start;
-  width: 75vw;
-  height: 75vh;
+  background: none;
+  width: auto;
+  box-shadow: none;
 }
