--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,7 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_var/popup_var_pictures.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__container/_var/popup__container_var_pictures.css);
@@ -41,6 +42,5 @@
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__subscribe/popup__subscribe.css);
 @import url(../blocks/popup/__image/popup__image.css);
-
 
 @import url(../blocks/service-buttons/service-buttons.css);
