--- a/pages/index.css
+++ b/pages/index.css
@@ -42,7 +42,10 @@
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__submit-button/_valid/popup__submit-button_valid.css);
+@import url(../blocks/popup/__submit-button/_invalid/popup__submit-button_invalid.css);
 @import url(../blocks/popup/__subscribe/popup__subscribe.css);
 @import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__error/popup__error.css);
 
 @import url(../blocks/service-buttons/service-buttons.css);
