--- a/pages/index.css
+++ b/pages/index.css
@@ -41,6 +41,7 @@
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__field/_type/popup__field_type_error.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__submit-button/_valid/popup__submit-button_valid.css);
 @import url(../blocks/popup/__submit-button/_invalid/popup__submit-button_invalid.css);
