--- a/src/blocks/cards/__image/cards__image.css
+++ b/src/blocks/cards/__image/cards__image.css
@@ -6,6 +6,7 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   grid-area: image;
+  background-color: #000;
 }
 
 .cards__image:hover {
